<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.indushospitals.model.DashboardItem" />

    </data>

    <FrameLayout
        android:id="@+id/fragContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/ten_dp"
                android:layout_marginRight="@dimen/ten_dp"
                android:orientation="vertical">

                <com.indushospitals.utils.font.CenturyGothicRegular
                    android:id="@+id/welcome_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:gravity="center"
                    android:padding="@dimen/five_dp"
                    android:text="@string/text_doc_appointment"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/pattens_blue_blue" />

                <com.indushospitals.customview.MaterialSpinner
                    android:id="@+id/spinnerCity"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:spinnerMode="dropdown"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    app:ms_arrowColor="@color/pattens_blue_blue"
                    app:ms_arrowSize="@dimen/sixteen_dp"
                    app:ms_floatingLabelColor="@color/dark_grey"
                    app:ms_floatingLabelText="@string/txt_city"
                    app:ms_hint="@string/txt_select_city"
                    app:ms_multiline="false" />
                <com.indushospitals.customview.MaterialSpinner
                    android:id="@+id/spinnerHospital"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:spinnerMode="dropdown"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    app:ms_arrowColor="@color/pattens_blue_blue"
                    app:ms_arrowSize="@dimen/sixteen_dp"
                    app:ms_floatingLabelColor="@color/dark_grey"
                    app:ms_floatingLabelText="@string/text_hospitalc"
                    app:ms_hint="@string/txt_select_hospital"
                    app:ms_multiline="false" />
                <com.indushospitals.customview.MaterialSpinner
                    android:id="@+id/spinnerSpeciality"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:spinnerMode="dropdown"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    app:ms_arrowColor="@color/pattens_blue_blue"
                    app:ms_arrowSize="@dimen/sixteen_dp"
                    app:ms_floatingLabelColor="@color/dark_grey"
                    app:ms_floatingLabelText="@string/txt_speciality"
                    app:ms_hint="@string/txt_select_speciality"
                    app:ms_multiline="false" />



                <com.indushospitals.customview.MaterialSpinner
                    android:id="@+id/spinnerDoctors"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:spinnerMode="dropdown"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    app:ms_arrowColor="@color/pattens_blue_blue"
                    app:ms_arrowSize="@dimen/sixteen_dp"
                    app:ms_floatingLabelColor="@color/dark_grey"
                    app:ms_floatingLabelText="@string/text_doctors"
                    app:ms_hint="@string/txt_select_doctor"
                    app:ms_multiline="false" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/rippleLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/ten_dp"
                    app:mrl_rippleAlpha="0.1"
                    app:mrl_rippleDelayClick="true"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_book_appointment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_circular_green"
                        android:elevation="@dimen/five_dp"
                        android:paddingLeft="@dimen/ten_dp"
                        android:paddingRight="@dimen/ten_dp"
                        android:text="@string/text_continue"
                        android:textAllCaps="false"
                        android:textAppearance="?android:attr/textAppearanceButton"
                        android:textColor="@android:color/white" />
                </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>