<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable name="viewModel" type="com.indushospitals.model.ValidationViewModel"/>

    </data>
<RelativeLayout
    android:id="@+id/fragContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginRight="@dimen/eight_dp">

            <com.indushospitals.customview.MaterialSpinner
                android:id="@+id/spinnerHospital"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:ms_arrowColor="@color/pattens_blue_blue"
                app:ms_arrowSize="@dimen/sixteen_dp"
                app:ms_floatingLabelColor="@color/dark_grey"
                app:ms_floatingLabelText="@string/text_hospitalc"
                app:ms_highlightColor="@color/colorPrimary"
                app:ms_hint="@string/txt_select_hospital"
                app:ms_multiline="true" />

            <com.indushospitals.customview.MaterialSpinner
                android:id="@+id/spinnerDoctor"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:ms_arrowColor="@color/pattens_blue_blue"
                app:ms_arrowSize="@dimen/sixteen_dp"
                app:ms_floatingLabelColor="@color/dark_grey"
                app:ms_floatingLabelText="@string/text_doc_namec"
                app:ms_hint="@string/txt_select_doctor"
                app:ms_highlightColor="@color/colorPrimary"
                app:ms_multiline="true" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_patient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.indushospitals.customview.CustomFontEditText
                    android:id="@+id/et_patient_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_patient_name"
                    android:inputType="textCapWords"

                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.indushospitals.customview.CustomFontEditText
                    android:id="@+id/et_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_age"
                    android:inputType="number"


                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.indushospitals.utils.font.CenturyGothicRegular
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:textSize="@dimen/fifteen_sp"
                    android:layout_weight="1"
                    android:text="@string/text_gender" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/text_male"

                    android:textSize="15sp" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/text_female"

                    android:textSize="15sp" />

            </RadioGroup>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
             >

                <com.indushospitals.customview.CustomFontEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_email_id"
                    android:inputType="textEmailAddress"


                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_contact_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               >

                <com.indushospitals.customview.CustomFontEditText
                    android:id="@+id/et_contact_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_contact_no2"
                    android:inputType="phone"


                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              >

                <com.indushospitals.customview.CustomFontEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_address"
                    android:inputType="textCapWords"

                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               >

                <com.indushospitals.customview.CustomFontEditText
                    android:id="@+id/et_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_additional_comments"
                    android:inputType="textCapWords"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>
            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/rippleSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mrl_rippleAlpha="0.1"
                app:mrl_rippleDelayClick="true"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true"
                android:layout_marginTop="@dimen/five_dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_circular_green"
                    android:elevation="@dimen/five_dp"
                    android:paddingLeft="@dimen/ten_dp"
                    android:paddingRight="@dimen/ten_dp"
                    android:text="@string/text_submit"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/twenty_sp" />
            </com.balysv.materialripple.MaterialRippleLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="310dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
</layout>
